# thirdpartyhsl

./: README.md
ThirdParty-HSL/coinhsl/: ChangeLog  README  meson.build  meson_options.txt
ThirdParty-HSL/coinhsl/common/: deps90.f90
ThirdParty-HSL/coinhsl/hsl_ma86/: hsl_ma86d.f90  hsl_ma86s.f90
ThirdParty-HSL/coinhsl/hsl_ma97/: hsl_ma97d.f90  hsl_ma97s.f90
ThirdParty-HSL/coinhsl/ma57/: ma57d.f  ma57s.f
ThirdParty-HSL/coinhsl/metis/: meson.build
